# seo-blog-analyzer

./: .gitignore  Dockerfile  README.md  app.py  input_url.txt  last_result.txt  main.py  pyproject.toml  requirements.txt  xp_blog_scraper.py
test/: test_playwright.py  teste_openai.py  xp_blog_scraper.py  xp_blog_scraper_pagespeed.py
